# Kitchen-Ingredients-Detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  serve.py  train.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
fruit-detection-24/: README.roboflow.txt
runs/detect/fruit/: args.yaml  results.csv
runs/detect/fruit2/: args.yaml  results.csv
src/kitchen_detector/: download_dataset.py  inference.py  nutrition.py  schemas.py
src/kitchen_detector/app/: main.py
