[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kitchen-ingredients-detector"
version = "0.1.0"
description = "YOLOv8-based kitchen ingredient detection with nutrition estimates"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
